force-app/main/default/objects/Periodic_touch_queries__c/Periodic_touch_queries__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Each record contains a query that returns a collection of records to be &quot;touched&quot; via scheduled apex.</description>
    <label>Periodic touch queries</label>
</CustomObject>