force-app/main/default/objects/Periodic_touch_queries__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then the scheduler will touch the records returned by the query.</description>
    <inlineHelpText>If checked, then the scheduler will touch the records returned by the query.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>