force-app/main/default/objects/Periodic_touch_queries__c/fields/Batch_size__c.field-meta.xml
<CustomField>
    <fullName>Batch_size__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The batch size (number of records run at a time in a batch process) when touching the records</description>
    <inlineHelpText>The batch size (number of records run at a time in a batch process) when touching the records</inlineHelpText>
    <label>Batch size</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>